--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,15 +1,13 @@
 <head>
   <meta name="author" content="Matthew Kern" />
 
-  <!-- supliments to the CSS -->
-  <!--<link rel="stylesheet" href="/css/overrides.css" />-->
+  <link rel="stylesheet" href="{{ "/css/styles.css" | relative_url }}"/>
 
 	<!-- Compiled and minified CSS -->
   <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">-->
 	<!-- Compiled and minified JavaScript -->
-  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-  <link rel="stylesheet" href="/css/styles.css" />
 
   <title>{{ site.title }}</title>
 </head>
