attempting to fix css remote loading issue

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
   <meta name="author" content="Matthew Kern" />
 
+  <!-- relative_url thing should fix css loading problem on github -->
   <link rel="stylesheet" href="{{ "/css/styles.css" | relative_url }}"/>
 
 	<!-- Compiled and minified CSS -->
