--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,15 @@
 <head>
   <meta name="author" content="Matthew Kern" />
 
-  <!-- relative_url thing should fix css loading problem on github -->
-  <link rel="stylesheet" href="{{ "/css/styles.css" | relative_url }}"/>
+  <!-- maybe renaming the file to main.css should fix css loading problem on github -->
+  <link rel="stylesheet" href="{{ "/css/main.css" | relative_url }}"/>
 
 	<!-- Compiled and minified CSS -->
   <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">-->
-	<!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+	<!-- Compiled and minified JavaScript for Materialize and JQuery-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
   <title>{{ site.title }}</title>
 </head>
