--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,8 @@
   <meta name="author" content="Matthew Kern" />
 
   <!-- maybe renaming the file to main.css should fix css loading problem on github -->
-  <link rel="stylesheet" href="{{ "/public/assets/main.css" | relative_url }}"/>
+  <!--<link rel="stylesheet" href="{{ "/public/assets/main.css" | relative_url }}"/>-->
+  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 
 	<!-- Compiled and minified CSS -->
   <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">-->
