trying absolute css path

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,8 @@
 
   <!-- maybe renaming the file to main.css should fix css loading problem on github -->
   <!--<link rel="stylesheet" href="{{ "/public/assets/main.css" | relative_url }}"/>-->
-  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+  <!--<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">-->
+  <link rel="stylesheet" href="https://mjkern.github.io/NASAnavigator/assets/css/main.css">
 
 	<!-- Compiled and minified CSS -->
   <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">-->
