--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,8 @@
   <!--<link rel="stylesheet" href="{{ "/public/assets/main.css" | relative_url }}"/>-->
   <!--<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">-->
   <!--<link rel="stylesheet" href="https://mjkern.github.io/NASAnavigator/assets/css/main.css">-->
-  <link rel="stylesheet" href="{{ "/assets/css/main.css" | absolute_url }}">
+  <!-- final tweak -->
+  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 
 	<!-- Compiled and minified CSS -->
   <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">-->
