--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,14 @@
 <head>
   <meta name="author" content="Matthew Kern" />
 
-  <!-- relative_url thing should fix css loading problem on github -->
+  <!-- all of the css (compiled from scss) -->
   <link rel="stylesheet" href="{{ "/css/styles.css" | relative_url }}"/>
 
-	<!-- Compiled and minified CSS -->
-  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">-->
 	<!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <!-- probably should change this to locally later... -->
 
+  <script src="{{ "js/scripts.js" | relative_url }}"></script>
 
   <title>{{ site.title }}</title>
 </head>
