--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
     {% include header.html %}
-    <div>
+    <div class="container">
       {{ content }}
     </div>
     {% include footer.html %}
