--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,10 +4,22 @@
   <!-- all of the scss compiled to css -->
   <link rel="stylesheet" href="{{ "css/styles.css" | relative_url }}" >
 
+  <!-- materialize icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 	<!-- all of the javascript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="{{ "js/scripts.js" | relative_url }}"></script>
+
+  <!--
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      var elems = document.querySelectorAll('select');
+      var instances = M.FormSelect.init(elems, []);
+    });
+  </script>
+  -->
 
   <title>{{ site.title }}</title>
 </head>
