--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,42 @@
 <header>
-  <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Logo</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
-      </ul>
-    </div>
-  </nav>
+  <div class="navbar-fixed">
+    <nav class="nav-extended">
+      <div class="nav-wrapper">
+        <a href="/" class="brand-logo">NASA navagator</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="sass.html">Sass</a></li>
+          <li><a href="badges.html">Components</a></li>
+          <li><a href="collapsible.html">JavaScript</a></li>
+        </ul>
+      </div>
+      <div class="nav-content">
+        <div class="row">
+          <form class="col s6">
+            <div class="row">
+              <div class="col s9">
+                <div class="row criterion">
+                  <div class="input-field col s4">
+                    <select>
+                      <option value="aaaa" selected >aaaa</option>
+                      <option value="bbbb">bbbb</option>
+                      <option value="cccc">cccc</option>
+                    </select>
+                  </div>
+                  <div class="input-field col s8">
+                    <input placeholder="Search here..." id="search0" type="text" class="validate" />
+                  </div>
+                </div>
+              </div>
+              <div class="col s1">
+                <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">add</i></a>
+              </div>
+              <div class="col s2">
+                <button class="btn-large waves-effect waves-light" type="submit" name="action">Search</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </div>
 </header>
