add clear criterion button

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,9 @@
           <form class="col s6">
             <div class="row">
               <div class="col s9">
+
                 <div class="row criterion">
-                  <div class="input-field col s4">
+                  <div class="input-field col s3">
                     <select>
                       <option value="aaaa" selected >aaaa</option>
                       <option value="bbbb">bbbb</option>
@@ -25,7 +26,11 @@
                   <div class="input-field col s8">
                     <input placeholder="Search here..." id="search0" type="text" class="validate" />
                   </div>
+                  <div class="col s1">
+                    <button class="btn-large waves-effect waves-light remove-criterion"><i class="material-icons">close</i></button>
+                  </div>
                 </div>
+
               </div>
               <div class="col s1">
                 <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">add</i></a>
