--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
             <div class="row">
               <div class="col s12 m9">
 
-                <div class="row criterion" id="criterion-0">
+                <div class="row criterion z-depth-1" id="criterion-0">
                   <div class="input-field col s3" id="domain-0">
                     <select>
                       <option value="aaaa" selected >aaaa</option>
