--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,10 +11,10 @@
       </div>
       <div class="nav-content">
         <div class="row">
-          <form class="col s12">
+          <form class="col s12" id="search-form">
             <div class="row">
-              <div class="col s12 m9">
-
+              <div class="col s12 m9" id="criteria">
+<!--
                 <div class="row criterion z-depth-1" id="criterion-0">
                   <div class="input-field col s3" id="domain-0">
                     <select>
@@ -30,12 +30,12 @@
                     <a class="clear-criterion"><i class="material-icons md-dark">close</i></a>
                   </div>
                 </div>
-
+-->
               </div>
               <div class="col s12 m3">
                 <div class="row" id="search-actions">
                   <a class="btn-floating btn-large vertical waves-effect waves-light" id="add-criterion"><i class="material-icons">add</i></a>
-                  <button class="btn-large waves-effect waves-light" type="submit" name="action">Search</button>
+                  <button id="search-submit" class="btn-large waves-effect waves-light" type="submit" name="action">Search</button>
               </div>
             </div>
           </form>
