--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,6 +36,7 @@
                 <div class="row" id="search-actions">
                   <a class="btn-floating btn-large vertical waves-effect waves-light" id="add-criterion"><i class="material-icons">add</i></a>
                   <button id="search-submit" class="btn-large waves-effect waves-light" type="submit" name="action">Search</button>
+                </div>
               </div>
             </div>
           </form>
