--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
 
   <body>
     {% include header.html %}
-    <div class="container">
+    <main>
       {{ content }}
-    </div>
+    </main>
     {% include footer.html %}
   </body>
 
