--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -25,6 +25,17 @@ $divider-color:        #BDBDBD;
 .material-icons.md-light { color: rgba(255, 255, 255, 1); }
 .material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
 
+// sticky footer
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
 // search bar
 .criterion {
   background-color: $primary-color-text;
