now queries with multiple fields

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="navbar-fixed">
+  <div class="">
     <nav class="nav-extended">
       <div class="nav-wrapper">
         <a href="/" class="brand-logo">NASA navagator</a>
