prototype of accordian

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
               </div>
               <div class="col s12 m3">
                 <div class="row" id="search-actions">
-                  <a class="btn-floating btn-large vertical waves-effect waves-light" id="add-criterion"><i class="material-icons">add</i></a>
+                  <a class="btn-floating btn-large tooltipped vertical waves-effect waves-light" id="add-criterion" data-tooltip="Add Another Field" ><i class="material-icons">add</i></a>
                   <button id="search-submit" class="btn-large waves-effect waves-light" type="submit" name="action">Search</button>
                 </div>
               </div>
