--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 <footer class="page-footer">
   <div class="container">
     <div class="row">
-      <div class="col l6 s12">
-        <h5 class="white-text">Footer Content</h5>
-        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+      <div class="col s12">
+        <h5 class="white-text">Thanks for visiting!</h5>
+        <p class="grey-text text-lighten-4">If you have any thoughs for questions, please email me at <a href="mailto:mjkern@andrew.cmu.edu">mjkern@andrew.cmu.edu</a></p>
       </div>
-      <div class="col l4 offset-l2 s12">
+      <div class="col l4 offset-l2 s12 hide">
         <h5 class="white-text">Links</h5>
         <ul>
           <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
@@ -18,8 +18,8 @@
   </div>
   <div class="footer-copyright">
     <div class="container">
-    © 2014 Copyright Text
-    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+    © 2019 Matthew Kern
+    <a class="grey-text text-lighten-4 right hide" href="#!">More Links</a>
     </div>
   </div>
 </footer>
