--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,14 +3,9 @@
     <nav class="nav-extended">
       <div class="nav-wrapper">
         <a href="/" class="brand-logo">NASA navagator</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
       </div>
       <div class="nav-content">
-        <div class="row">
+        <div class="row center">
           <form class="col s12" id="search-form">
             <div class="row">
               <div class="col s12 m9" id="criteria">
@@ -32,8 +27,8 @@
                 </div>
 -->
               </div>
-              <div class="col s12 m3">
-                <div class="row" id="search-actions">
+              <div class="col s12 m3 search-actions-col">
+                <div class="row valign-wrapper" id="search-actions">
                   <a class="btn-floating btn-large tooltipped vertical waves-effect waves-light" id="add-criterion" data-tooltip="Add Another Field" ><i class="material-icons">add</i></a>
                   <button id="search-submit" class="btn-large waves-effect waves-light" type="submit" name="action">Search</button>
                 </div>
