cleaned up index

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,30 +2,13 @@
   <div class="">
     <nav class="nav-extended">
       <div class="nav-wrapper">
-        <a href="/" class="brand-logo">NASA navagator</a>
+        <a href="/" class="brand-logo">NASA navigator</a>
       </div>
       <div class="nav-content">
         <div class="row center">
           <form class="col s12" id="search-form">
             <div class="row">
               <div class="col s12 m9" id="criteria">
-<!--
-                <div class="row criterion z-depth-1" id="criterion-0">
-                  <div class="input-field col s3" id="domain-0">
-                    <select>
-                      <option value="aaaa" selected >aaaa</option>
-                      <option value="bbbb">bbbb</option>
-                      <option value="cccc">cccc</option>
-                    </select>
-                  </div>
-                  <div class="input-field col s8">
-                    <input placeholder="Search here..." id="search-0" type="text" class="validate" />
-                  </div>
-                  <div class="col s1">
-                    <a class="clear-criterion"><i class="material-icons md-dark">close</i></a>
-                  </div>
-                </div>
--->
               </div>
               <div class="col s12 m3 search-actions-col">
                 <div class="row valign-wrapper" id="search-actions">
