removed collapsible outline

--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -67,6 +67,11 @@ main {
   height: auto;
 }
 
+.collapsible.img-collapse {
+  box-shadow: 0px !important; // this needs to be important because materialize does it too
+  border-width: 0px;
+}
+
 // footer
 footer a {
   color: $divider-color;
