fixed home link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="">
     <nav class="nav-extended">
       <div class="nav-wrapper">
-        <a href="https://mjkern.github.io/NASAnavigator/" class="brand-logo">NASA navigator</a>
+        <a href="{{ "/" | relative_url }}" class="brand-logo">NASA navigator</a>
       </div>
       <div class="nav-content">
         <div class="row center">
